#
# Copyright 2017 The Abseil Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This package contains `absl::Status`.
# It will expand later to have utilities around `Status` like `StatusOr`,
# `StatusBuilder` and macros.

load(
    "//absl:copts/configure_copts.bzl",
    "ABSL_DEFAULT_COPTS",
    "ABSL_DEFAULT_LINKOPTS",
    "ABSL_TEST_COPTS",
)

package(
    default_visibility = ["//visibility:public"],
    features = [
        "header_modules",
        "layering_check",
        "parse_headers",
    ],
)

licenses(["notice"])

cc_library(
    name = "status",
    srcs = [
        "internal/status_internal.cc",
        "internal/status_internal.h",
        "status.cc",
        "status_payload_printer.cc",
    ],
    hdrs = [
        "status.h",
        "status_payload_printer.h",
    ],
    copts = ABSL_DEFAULT_COPTS,
    linkopts = ABSL_DEFAULT_LINKOPTS,
    deps = [
        "//../base:atomic_hook",
        "//../base:config",
        "//../base:core_headers",
        "//../base:no_destructor",
        "//../base:nullability",
        "//../base:raw_logging_internal",
        "//../base:strerror",
        "//../container:inlined_vector",
        "//../debugging:leak_check",
        "//../debugging:stacktrace",
        "//../debugging:symbolize",
        "//../functional:function_ref",
        "//../memory",
        "//../strings",
        "//../strings:cord",
        "//../strings:str_format",
        "//../types:optional",
        "//../types:span",
    ],
)

cc_test(
    name = "status_test",
    srcs = ["status_test.cc"],
    copts = ABSL_TEST_COPTS,
    linkopts = ABSL_DEFAULT_LINKOPTS,
    deps = [
        ":status",
        "//../strings",
        "//../strings:cord",
        "//../strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "statusor",
    srcs = [
        "internal/statusor_internal.h",
        "statusor.cc",
    ],
    hdrs = [
        "statusor.h",
    ],
    copts = ABSL_DEFAULT_COPTS,
    linkopts = ABSL_DEFAULT_LINKOPTS,
    deps = [
        ":status",
        "//../base",
        "//../base:config",
        "//../base:core_headers",
        "//../base:nullability",
        "//../base:raw_logging_internal",
        "//../meta:type_traits",
        "//../strings",
        "//../strings:has_ostream_operator",
        "//../strings:str_format",
        "//../types:variant",
        "//../utility",
    ],
)

cc_test(
    name = "statusor_test",
    size = "small",
    srcs = ["statusor_test.cc"],
    deps = [
        ":status",
        ":status_matchers",
        ":statusor",
        "//../base",
        "//../memory",
        "//../strings",
        "//../types:any",
        "//../types:variant",
        "//../utility",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "status_matchers",
    testonly = 1,
    srcs = [
        "internal/status_matchers.cc",
        "internal/status_matchers.h",
    ],
    hdrs = ["status_matchers.h"],
    copts = ABSL_DEFAULT_COPTS,
    linkopts = ABSL_DEFAULT_LINKOPTS,
    deps = [
        ":status",
        ":statusor",
        "//../base:config",
        "//../strings:string_view",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "status_matchers_test",
    size = "small",
    srcs = ["status_matchers_test.cc"],
    copts = ABSL_TEST_COPTS,
    linkopts = ABSL_DEFAULT_LINKOPTS,
    deps = [
        ":status",
        ":status_matchers",
        ":statusor",
        "//../strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
